kubernetes/apps/infrastructure/openldap/app/phpldapadmin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpldapadmin
  namespace: openldap
  labels:
    app: phpldapadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpldapadmin
  template:
    metadata:
      labels:
        app: phpldapadmin
    spec:
      containers:
        - name: phpldapadmin
          image: osixia/phpldapadmin:0.9.0
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: phpldapadmin
  namespace: openldap
spec:
  selector:
    app: phpldapadmin
  ports:
    - port: 80
      targetPort: 80
      name: http
