kubernetes/apps/infrastructure/openldap/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: phpldapadmin
  namespace: openldap
spec:
  parentRefs:
    - name: openldap-gateway-istio
      namespace: openldap
  hostnames:
    - ldap.chillincool.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: phpldapadmin
          port: 80
